syntax = "proto3";

package proto;

option go_package = "github.com/cristiancll/qrpay-be/proto";

import "google/protobuf/timestamp.proto";

import "user.proto";
import "sku.proto";

message Sale {
  string uuid = 1;
  User user = 2;
  User seller = 3;
  int64 total = 4;
  bool paid = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message SaleItem {
  string uuid = 1;
  Sale sale = 2;
  SKU sku = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message SaleUnit {
  string skuUUID = 1;
  int64 quantity = 2;
}

service SaleService {
  rpc Create(SaleCreateRequest) returns (SaleCreateResponse);
  rpc Get(SaleGetRequest) returns (SaleGetResponse);
  rpc List(SaleListRequest) returns (SaleListResponse);
  rpc Update(SaleUpdateRequest) returns (SaleUpdateResponse);
  rpc Delete(SaleDeleteRequest) returns (SaleDeleteResponse);

  rpc ListSaleItemsByUser(ListSaleItemsByUserRequest) returns (ListSaleItemsByUserResponse);
  rpc ListAvailableSaleItemsByUser(ListAvailableSaleItemsByUserRequest) returns (ListAvailableSaleItemsByUserResponse);
}

message ListSaleItemsByUserRequest {
  string userUUID = 1;
}

message ListSaleItemsByUserResponse {
  repeated SaleItem saleItems = 1;
}

message ListAvailableSaleItemsByUserRequest {
  string userUUID = 1;
}

message ListAvailableSaleItemsByUserResponse {
  repeated SaleItem saleItems = 1;
}

message SaleCreateRequest {
  string userUUID = 1;
  repeated SaleUnit units = 2;
}
message SaleCreateResponse {
  Sale sale = 1;
}

message SaleGetRequest {
  string uuid = 1;
}
message SaleGetResponse {
  Sale sale = 1;
}

message SaleListRequest {}

message SaleListResponse {
  repeated Sale sales = 1;
}

message SaleUpdateRequest {
  string uuid = 1;
  User user = 2;
  User seller = 3;
  int64 total = 4;
  bool paid = 5;
}
message SaleUpdateResponse {
  Sale sale = 1;
}

message SaleDeleteRequest {
  string uuid = 1;
}
message SaleDeleteResponse {}

